<resources>
    <string name="app_name">高斯遥控</string>
    <string name="home_remoter">遥控器</string>
    <string name="home_live">直播</string>
    <string name="home_program_list">节目列表</string>
    <string name="home_epg">EPG</string>
    <string name="home_more">更多</string>
    <string name="home_info">该功能尚未开放,敬请期待!</string>
    <string name="home_alert_title">提示</string>
    <string name="home_alert_msg">你确定退出连接吗？</string>
    <string name="home_alert_negative">取消</string>
    <string name="home_alert_positive">确认</string>
    <string name="program_lcn">LCN</string>
    <string name="program_name">节目名</string>
    <string name="program_title">节目列表</string>
    <string name="remoter_title">遥控器</string>
    <string name="remoter_number">123</string>
    <string name="remoter_menu">Menu</string>
    <string name="remoter_fav">Fav</string>
    <string name="remoter_pvr">PVR</string>
    <string name="remoter_exit">Exit</string>
    <string name="remoter_zero">0</string>
    <string name="remoter_one">1</string>
    <string name="remoter_two">2</string>
    <string name="remoter_three">3</string>
    <string name="remoter_four">4</string>
    <string name="remoter_five">5</string>
    <string name="remoter_six">6</string>
    <string name="remoter_seven">7</string>
    <string name="remoter_eight">8</string>
    <string name="remoter_nine">9</string>
    <string name="remoter_back">BACK</string>
    <string name="remoter_ok">OK</string>
    <string name="epg_title">EPG</string>
    <string name="epg_Reservation_record">预订录制</string>
    <string name="epg_Scheduled_to_watch">预订观看</string>
    <string name="epg_progSettingBtnText_Once">一天</string>
    <string name="epg_progSettingBtnText_Days">每天</string>
    <string name="epg_test">核心是重写BaseExpandableListAdpter，其实和之前写的普通的BaseAdapter是类似的， 但是BaseExpandableListAdpter则分成了两部分：组和子列表，具体看代码你就知道了！</string>
    <string name="live_title">直播</string>
    <string name="live_not_found_program">不存在该类型的节目</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="tab_menu_remote">遥控器</string>
    <string name="tab_menu_live">直播</string>
    <string name="tab_menu_connect">连接</string>
    <string name="tab_menu_epg">EPG</string>
    <string name="mask_stop_loading">停止加载</string>
    <string name="exit_dialog_title">系统信息</string>
    <string name="exit_dialog_content">你确定要退出吗?</string>
    <string name="exit_dialog_cancel">取消</string>
    <string name="exit_dialog_confirm">确定</string>
    <string name="connect_set_server">设置服务器地址</string>
    <string name="connect_edit_server_address">请输入服务器地址</string>
    <string name="connect_confirm">连接</string>
    <string name="connect_hint">地址不能为空</string>
    <string name="connect_format">地址格式错误,请重新输入</string>
    <string name="connect_attach">设备已连接</string>
    <string name="connect_detach">设备已断开</string>
    <string name="connect_detach_hint">断开连接</string>
    <string name="connect_try_connect">尝试连接设备...</string>
    <string name="connect_title">高斯贝尔</string>
    <string name="homeTitle">高斯贝尔</string>
    <string name="homeExit">退出</string>
    <string name="scan_title">扫一扫</string>
    <string name="ret">返回</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="scan_text">将二维码放入框内即可自动扫描</string>
    <string name="scan_data_parse_error">数据解析异常</string>
    <string name="allow_camera_permission">请允许开启照相机权限</string>
    <string name="epg_program_title">Select Program</string>
    <string name="epg_time_title">Select Date</string>
    <string name="epg_tab_start_time">Start Time</string>
    <string name="epg_tab_end_time">End Time</string>
    <string name="epg_tab_reserve">Reserve</string>
    <string name="epg_tab_time">Time</string>
    <string name="epg_tab_event">Events</string>
    <string name="epg_dialog_title">Epg Detail Info</string>
    <string name="epg_dialog_pro_name">Name:</string>
    <string name="epg_dialog_date">Date:</string>
    <string name="epg_dialog_start_time">Start Time:</string>
    <string name="epg_dialog_end_time">End Time:</string>
    <string name="epg_dialog_event_name">Events:</string>
    <string name="epg_dialog_short_descriptor">Descriptions:</string>
    <string name="epg_dialog_confirm">Confirm</string>
    <string name="epg_dialog_test">ccc</string>
    <string name="epg_reserve_event_info">event info</string>
    <string name="epg_reserve_event_type">event type</string>
    <string name="epg_reserve_event_id">event id</string>
    <string name="epg_reserve_job_index">job index</string>
    <string name="epg_reserve_program_index">program index</string>
    <string name="epg_reserve_date">date</string>
    <string name="epg_reserve_start_time">start time</string>
    <string name="epg_reserve_end_time">end time</string>
    <string name="epg_reserve_event">event</string>
    <string name="epg_reserve_boot_type">book type</string>
    <string name="epg_reserve_select">select</string>
    <string name="epg_reserve_conflict">conflict</string>
    <string name="epg_reserve_menu_view">View</string>
    <string name="epg_reserve_menu_view_series">View Series</string>
    <string name="epg_reserve_menu_record">Record</string>
    <string name="epg_reserve_menu_record_series">Record Series</string>
    <string name="epg_clash_dialog_title">Following reminders are conflicting with eath other</string>
    <string name="epg_clash_dialog_confirm">Confirm</string>
    <string name="epg_clash_dialog_cancel">Cancel</string>
    <string name="small_problem">播放器出现了一点问题</string>
    <string name="not_support">播放器不支持</string>
    <string name="pref_key_enable_background_play">pref.enable_background_play</string>
    <string name="pref_key_player">pref.player</string>
    <string name="switch_freq">主频点已切换，即将结束当前直播</string>
    <string name="heartbeat_stop">与服务器失联</string>
    <string name="jump_connect">尚未连接，请连接</string>
    <string name="jump">点击连接</string>
    <string name="pref_key_using_media_codec">pref.using_media_codec</string>
    <string name="pref_key_using_media_codec_auto_rotate">pref.using_media_codec_auto_rotate</string>
    <string name="pref_key_media_codec_handle_resolution_change">pref.media_codec_handle_resolution_change</string>
    <string name="pref_key_pixel_format">pref.pixel_format</string>
    <string name="pref_key_using_opensl_es">pref.using_opensl_es</string>
    <string name="pref_key_enable_no_view">pref.enable_no_view</string>
    <string name="pref_key_enable_surface_view">pref.enable_surface_view</string>
    <string name="pref_key_enable_texture_view">pref.enable_texture_view</string>
    <string name="pref_key_enable_detached_surface_texture">pref.enable_detached_surface_texture</string>
    <string name="pref_key_using_mediadatasource">pref.using_mediadatasource</string>
    <string name="action_settings">设置</string>
    <string name="pulldown_refresh">下拉刷新…</string>
    <string name="pulldown_refresh_ready">松开以刷新…</string>
    <string name="pulldown_refreshing">正在刷新…</string>
    <string name="pullup_load">上拉加载更多…</string>
    <string name="pullup_load_ready">松开以加载…</string>
    <string name="pullup_loading">正在加载…</string>
    <string name="exit">是否要退出高斯点播 ?</string>
    <string name="exit2">再按一次退出应用</string>
    <string name="download_app_msg">正在下载升级包，请稍后...</string>
    <string name="update_network_error">"网络异常，请检查网络连接状况"</string>
    <string name="update_access_error">"您的设备不支持直接升级"</string>
    <string name="comfirm">确定</string>
    <string name="reupdate">重试</string>
    <string name="Cancel">取消</string>
    <string name="update_imm">立即升级</string>
    <string name="update_exit">就是不升</string>
    <string name="setting">导航设置</string>
    <string name="set_server">设置导航服务器</string>
    <string name="edit_server">请输入导航服务器地址</string>
    <string name="daohangassress_null">地址不能为空</string>
    <string name="daohangassress_failed">导航设置失败,请重新设置</string>
    <string name="please_wait">请稍后...</string>
    <string name="tv_logo">GOSPELL</string>
    <string name="loading">加载中…</string>
    <string name="more">更多</string>
    <string name="clickRefresh">点击刷新</string>
    <string name="refresh_time">更新时间：</string>
    <string name="last_refresh_time">上次更新时间：</string>
    <string name="empty_list">暂无数据</string>
    <string name="netError">网络连接错误</string>
    <string name="serverError">服务器错误</string>
    <string name="live">直播</string>
    <string name="wifi">无线</string>
    <string name="search_channel">输入视频名称或主演</string>
    <string name="grid_TVplay">电视剧</string>
    <string name="grid_Documentary">纪录片</string>
    <string name="grid_Cartoon">动漫</string>
    <string name="grid_Film">电影</string>
    <string name="grid_Music">音乐</string>
    <string name="grid_Variety">综艺</string>
    <string name="grid_Entertainment">娱乐</string>
    <string name="toast_search">搜索关键字不能为空</string>
    <string name="tv_search_result">搜索结果</string>
    <string name="tv_score">score：</string>
    <string name="tv_vedio_score">Vedio Score</string>
    <string name="tv_vedio_name">Vedio name</string>
    <string name="tv_screen">筛选</string>
    <string name="tv_sorting">排序</string>
    <string name="tv_type">类型</string>
    <string name="tv_area">地区</string>
    <string name="tv_year">年份</string>
    <string name="tv_dialog_msg">该视频为付费视频，是否付费继续观看！</string>
    <string name="btn_screning_cancel">取消</string>
    <string name="btn_screning_commit">确认</string>
    <string name="tv_vedio_save">收藏</string>
    <string name="tv_vedio_director">导演：</string>
    <string name="tv_vedio_year">年份：</string>
    <string name="tv_vedio_cost">费用：</string>
    <string name="tv_vedio_cost_num">免费</string>
    <string name="tv_vedio_leading_role">主演：</string>
    <string name="tv_series">剧集</string>
    <string name="tv_vedio_recomend">猜你喜欢</string>
    <string name="tv_vedio_recomend_score">92%的人喜欢</string>
    <string name="retrieve_area">地区</string>
    <string name="retrieve_year">年份</string>
    <string name="all">全部</string>
    <string name="music">音乐</string>
    <string name="stream_standard">标清</string>
    <string name="stream_high">高清</string>
    <string name="series_title" formatted="false">%s-%s</string>
    <string name="series_current" formatted="false">更新到第%s集/</string>
    <string name="series_total" formatted="false">共%s集</string>
    <string name="do_login_prompt">请登录后再进行操作</string>
    <string name="add_favor_success">已添加收藏</string>
    <string name="add_favor_failed">添加收藏失败</string>
    <string name="cancel_favor_success">已取消收藏</string>
    <string name="cancel_favor_failed">取消收藏失败</string>
    <string name="pay_failed">支付失败</string>
    <string name="not_enough_balance">余额不足</string>
    <string name="sort_by_new">新上架</string>
    <string name="sort_by_update">有更新</string>
    <string name="sort_by_score">好评榜</string>
    <string name="sort_by_a_z">A~Z</string>
    <string name="nulltext"> </string>
    <string name="tv_myself">我的</string>
    <string name="tv_click_login">点击登录</string>
    <string name="tv_login_info">登录后您可享受云同步及更多特权</string>
    <string name="tv_login_tip">请登录后查看</string>
    <string name="tv_login">登录</string>
    <string name="tv_account_login">帐号登录</string>
    <string name="edit_account">请输入登录帐号</string>
    <string name="edit_password">请输入登录密码</string>
    <string name="tv_palyhistory">播放历史</string>
    <string name="tv_paly_date">播放日期：</string>
    <string name="tv_paly_time">观看至</string>
    <string name="tv_collection">我的收藏</string>
    <string name="tv_buy_packages">购买套餐</string>
    <string name="tv_rechargerecord">充值记录</string>
    <string name="tv_consumerecord">消费记录</string>
    <string name="tv_userfeedback">用户反馈</string>
    <string name="account_error">账号密码不正确</string>
    <string name="tv_myselfinfo">个人信息</string>
    <string name="tv_myselfinfo_logout">注销</string>
    <string name="tv_myselfinfo_logo">修改头像</string>
    <string name="tv_myselfinfo_name">昵称</string>
    <string name="tv_myselfinfo_email">邮箱</string>
</resources>