<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <RadioGroup
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_menu_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tab_menu_background"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tab_menu_home"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_remote"
            android:text="@string/tab_menu_remote" />

        <RadioButton
            android:id="@+id/tab_menu_live"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_live"
            android:text="@string/tab_menu_live" />

        <RadioButton
            android:id="@+id/tab_menu_connect"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_connect"
            android:text="@string/tab_menu_connect" />

        <RadioButton
            android:id="@+id/tab_menu_epg"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_epg"
            android:text="@string/tab_menu_epg" />


    </RadioGroup>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/tab_menu"
        android:background="@color/div_white"
        tools:ignore="PxUsage" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/div_tab_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />


</RelativeLayout>