<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@id/textLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon_network"
            android:visibility="visible" />

        <TextView
            android:id="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="23.0dip"
            android:text="@string/netError"
            android:textColor="@color/dark3"
            android:textSize="14.0sp"
            android:visibility="visible" />

        <TextView
            android:id="@id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6.0dip"
            android:textColor="@color/gray2"
            android:textSize="12.0sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/retryTitle"
            android:layout_width="120.0dip"
            android:layout_height="30.0dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="47.0dip"
            android:background="@drawable/btn_refresh_bg"
            android:gravity="center"
            android:text="@string/clickRefresh"
            android:textColor="@color/red"
            android:textSize="14.0sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/progressLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <!--进度条加载样式，动图由一帧一帧显示-->
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progressbar_foxtail_large" />

        <TextView
            android:id="@id/progressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8.0dip"
            android:text="@string/loading"
            android:textColor="@color/gray1"
            android:textSize="14.0sp" />


        <TextView
            android:id="@+id/stopLoading"
            android:layout_width="120.0dip"
            android:layout_height="30.0dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="47.0dip"
            android:background="@drawable/btn_refresh_bg"
            android:gravity="center"
            android:text="@string/mask_stop_loading"
            android:textColor="@color/red"
            android:textSize="14.0sp"
            android:visibility="visible" />
    </LinearLayout>

</merge>