<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg1_whole"
    android:orientation="vertical">

    <gos.remoter.view.TitleBar
        android:id="@+id/titlebar"
        style="@style/TitleBar">

    </gos.remoter.view.TitleBar>

    <LinearLayout
        android:id="@+id/ll_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/connect_set_server"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/edit_server_ip"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/connect_edit_server_address"
                android:paddingLeft="7dp"
                android:paddingRight="30dp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dp"
                android:src="@drawable/delete_address"
                android:visibility="gone" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/red_1"
            android:text="@string/connect_confirm"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/transparent">

        <ListView
            android:id="@+id/list_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="180dp"
            android:divider="@color/dialog_divider_color"
            android:dividerHeight="0.5dp"
            android:scrollbars="none"
            android:background="@color/white"
            android:visibility="invisible"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_disconnect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/iv_disconnect"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:src="@drawable/address_disconnect2" />

        <TextView
            android:id="@+id/tx_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/connect_detach_hint"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:clickable="true" />

    </LinearLayout>

    <!--<EditText
        android:id="@+id/ipText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="ip"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Connect" />-->


</LinearLayout>